# ds5-edge-relay

./: 99-ds5-edge-relay.rules  CMakeLists.txt  LICENSE  README.md  README.ru.md  ds5-edge-relay.desktop  ds5-edge-relay.service  resources.qrc
relay-core/: ds5_report.hpp  evdev_grabber.cpp  evdev_grabber.hpp  macro_engine.cpp  macro_engine.hpp  macro_types.hpp  macro_widget.cpp  macro_widget.hpp  relay.hpp
src/: bindeditorwidget.cpp  bindeditorwidget.hpp  bindstorage.cpp  bindstorage.hpp  gamepadwidget.cpp  gamepadwidget.hpp  hidraw_utils.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  relayworker.cpp  relayworker.hpp  uhid_device.hpp
